[ai-assisted] refactor(ai): 1.x LangChain4j 백포트 (#461)
* [ai-assisted] refactor(ai): 1.x LangChain4j 백포트

Issue: 없음

예외 사유: 사용자가 2.x 기반 1.x 재구성 계획 구현과 PR 등록을 직접 요청함.

변경 사항:

- Spring Boot 2.7.18 / Java 11 기준으로 1.x 소스와 테스트를 다운포팅함.

- Spring AI main dependency/import를 제거하고 LangChain4j core/provider 직접 bean 구성으로 전환함.

- studio.ai.* canonical 설정과 spring.ai.* migration fallback을 유지함.

- Boot 2 호환 spring.factories 기반 auto-configuration으로 전환함.

- OpenAI/Ollama/Gemini chat/embedding provider adapter와 request override, streaming, Gemini base-url fail-fast를 보완함.

검증:

- ./gradlew clean compileJava compileTestJava: 성공

리뷰:

- 서브에이전트 반복 리뷰 수행: request override/streaming/Gemini base-url/system-message blocker 조치 후 최종 PASS 확인.

AI-Assisted: Yes

* [ai-assisted] fix(build): 1.x 로컬 build 회귀 수정

1.x LangChain4j 백포트 PR의 로컬 build 실패를 조치했다.

주요 조치:

- streaming 미지원 provider는 ChatPort 기본 stream fallback을 사용하도록 수정

- record에서 class로 전환된 값 객체의 equals/hashCode 복원

- Boot 2.7/Jackson 호환을 위한 DTO 생성자, getter, JsonCreator 보강

- Docker 미사용 로컬 환경에서 Testcontainers 테스트가 skip되도록 조정

- Boot 2 조건부 빈 등록 타이밍 문제를 property 조건으로 조정

- thumbnail 실패/삭제 memo key equality 회귀 수정

Validation:

- ./gradlew build: 성공

- 서브에이전트 반복 리뷰: PASS (blocker/high 없음)

Issue: 없음 - 1.x 백포트 PR 후속 build/review 조치

* [ai-assisted] fix(attachment): restore 1.x file API compatibility

1.x/2.x 호환을 위해 파일 관리 API alias, 인증 principal 처리, RAG 상태 엔드포인트 등록, 로컬 파일 저장소 레거시 경로 fallback을 보완했다.

첨부 상세 화면에서 사용하는 /api/mgmt/files/{id}, /embedding/exists, /rag/metadata, /text, /thumbnail, /download 경로가 정상 응답하도록 수정했다.

Validation:

- ./gradlew :studio-application-modules:attachment-service:compileJava :studio-application-modules:content-embedding-pipeline:compileJava

- 서버 8080 재시작 후 /api/mgmt/files/3 관련 상세 API 200 확인

Issue: 기존 PR 후속 수정으로 별도 Issue 없음

* [ai-assisted] fix(ai): relax vector projection points access

벡터 projection points 조회 API를 read 권한으로 조정하고 JdbcVectorProjectionPointRepository SQL 조립 시 WHERE/LIMIT 앞 공백이 누락될 수 있는 문제를 수정했다.

Validat