@@ -4,21 +4,29 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Collections;
 
 /**
  * Input for expanding a retrieval child chunk into a larger answer context.
  * {@code availableChunks} is expected to be a small, pre-filtered candidate set
  * around the seed chunk, not an entire corpus or unbounded retrieval result.
  */
-public record ChunkContextExpansionRequest(
-        Chunk seedChunk,
-        List<Chunk> availableChunks,
-        int previousWindow,
-        int nextWindow,
-        boolean includeParentContent,
-        Map<String, Object> options) {
+public class ChunkContextExpansionRequest {
+    private final Chunk seedChunk;
+    private final List<Chunk> availableChunks;
+    private final int previousWindow;
+    private final int nextWindow;
+    private final boolean includeParentContent;
+    private final Map<String, Object> options;
 
-    public ChunkContextExpansionRequest {
+
+    public ChunkContextExpansionRequest(
+            Chunk seedChunk,
+            List<Chunk> availableChunks,
+            int previousWindow,
+            int nextWindow,
+            boolean includeParentContent,
+            Map<String, Object> options) {
         seedChunk = Objects.requireNonNull(seedChunk, "seedChunk must not be null");
         availableChunks = sanitizeChunks(availableChunks);
         if (previousWindow < 0) {
@@ -28,6 +36,13 @@ public record ChunkContextExpansionRequest(
             throw new IllegalArgumentException("nextWindow must not be negative");
         }
         options = ChunkMetadataMaps.sanitize(options);
+    
+        this.seedChunk = seedChunk;
+        this.availableChunks = availableChunks;
+        this.previousWindow = previousWindow;
+        this.nextWindow = nextWindow;
+        this.includeParentContent = includeParentContent;
+        this.options = options;
     }
 
     public static Builder builder(Chunk seedChunk) {
@@ -55,9 +70,9 @@ public record ChunkContextExpansionRequest(
         if (chunks == null || chunks.isEmpty()) {
             return List.of();
         }
-        return chunks.stream()
+        return Collections.unmodifiableList(chunks.stream()
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(java.util.stream.Collectors.toList()));
     }
 
     public static final class Builder {
@@ -101,5 +116,29 @@ public record ChunkContextExpansionRequest(
             return new ChunkContextExpansionRequest(seedChunk, availableChunks, previousWindow, nextWindow,
                     includeParentContent, options);
         }
+    }
+
+    public Chunk seedChunk() {
+        return seedChunk;
+    }
+
+    public List<Chunk> availableChunks() {
+        return availableChunks;
+    }
+
+    public int previousWindow() {
+        return previousWindow;
+    }
+
+    public int nextWindow() {
+        return nextWindow;
+    }
+
+    public boolean includeParentContent() {
+        return includeParentContent;
+    }
+
+    public Map<String, Object> options() {
+        return options;
     }
 }
