@@ -5,100 +5,290 @@ import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
-public record PyMuPdf4LlmResponse(
-        String filename,
-        String contentType,
-        String markdown,
-        List<Page> pages,
-        List<Block> blocks,
-        List<Table> tables,
-        List<Image> images,
-        Map<String, Object> metadata,
-        List<Warning> warnings,
-        Long elapsedMs,
-        Boolean ocrApplied) {
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonProperty;
 
-    public PyMuPdf4LlmResponse {
+import lombok.Value;
+import lombok.experimental.Accessors;
+
+@Value
+@Accessors(fluent = true)
+public class PyMuPdf4LlmResponse {
+    String filename;
+    String contentType;
+    String markdown;
+    List<Page> pages;
+    List<Block> blocks;
+    List<Table> tables;
+    List<Image> images;
+    Map<String, Object> metadata;
+    List<Warning> warnings;
+    Long elapsedMs;
+    Boolean ocrApplied;
+
+
+    @JsonCreator
+    public PyMuPdf4LlmResponse(
+            @JsonProperty("filename") String filename,
+            @JsonProperty("contentType") String contentType,
+            @JsonProperty("markdown") String markdown,
+            @JsonProperty("pages") List<Page> pages,
+            @JsonProperty("blocks") List<Block> blocks,
+            @JsonProperty("tables") List<Table> tables,
+            @JsonProperty("images") List<Image> images,
+            @JsonProperty("metadata") Map<String, Object> metadata,
+            @JsonProperty("warnings") List<Warning> warnings,
+            @JsonProperty("elapsedMs") Long elapsedMs,
+            @JsonProperty("ocrApplied") Boolean ocrApplied) {
         pages = copyList(pages);
         blocks = copyList(blocks);
         tables = copyList(tables);
         images = copyList(images);
         metadata = copyMap(metadata);
         warnings = copyList(warnings);
+
+
+        this.filename = filename;
+
+
+        this.contentType = contentType;
+
+
+        this.markdown = markdown;
+
+
+        this.pages = pages;
+
+
+        this.blocks = blocks;
+
+
+        this.tables = tables;
+
+
+        this.images = images;
+
+
+        this.metadata = metadata;
+
+
+        this.warnings = warnings;
+
+
+        this.elapsedMs = elapsedMs;
+
+
+        this.ocrApplied = ocrApplied;
+
+
     }
 
-    public record Page(
-            Integer pageNumber,
-            String text,
-            List<Block> blocks,
-            Map<String, Object> metadata) {
-        public Page {
+        @Value
+    @Accessors(fluent = true)
+    public static final class Page {
+        Integer pageNumber;
+        String text;
+        List<Block> blocks;
+        Map<String, Object> metadata;
+
+        @JsonCreator
+        public Page(
+                @JsonProperty("pageNumber") Integer pageNumber,
+                @JsonProperty("text") String text,
+                @JsonProperty("blocks") List<Block> blocks,
+                @JsonProperty("metadata") Map<String, Object> metadata) {
             blocks = copyList(blocks);
             metadata = copyMap(metadata);
+
+            this.pageNumber = pageNumber;
+
+            this.text = text;
+
+            this.blocks = blocks;
+
+            this.metadata = metadata;
+
         }
     }
 
-    public record Block(
-            String type,
-            String text,
-            Integer pageNumber,
-            Integer order,
-            Integer level,
-            String sourceRef,
-            List<Double> bbox,
-            Map<String, Object> metadata) {
-        public Block {
+        @Value
+    @Accessors(fluent = true)
+    public static final class Block {
+        String type;
+        String text;
+        Integer pageNumber;
+        Integer order;
+        Integer level;
+        String sourceRef;
+        List<Double> bbox;
+        Map<String, Object> metadata;
+
+        @JsonCreator
+        public Block(
+                @JsonProperty("type") String type,
+                @JsonProperty("text") String text,
+                @JsonProperty("pageNumber") Integer pageNumber,
+                @JsonProperty("order") Integer order,
+                @JsonProperty("level") Integer level,
+                @JsonProperty("sourceRef") String sourceRef,
+                @JsonProperty("bbox") List<Double> bbox,
+                @JsonProperty("metadata") Map<String, Object> metadata) {
             bbox = copyList(bbox);
             metadata = copyMap(metadata);
+
+            this.type = type;
+
+            this.text = text;
+
+            this.pageNumber = pageNumber;
+
+            this.order = order;
+
+            this.level = level;
+
+            this.sourceRef = sourceRef;
+
+            this.bbox = bbox;
+
+            this.metadata = metadata;
+
         }
     }
 
-    public record Table(
-            Integer pageNumber,
-            String caption,
-            List<String> headers,
-            List<List<String>> rows,
-            String markdown,
-            String sourceRef,
-            List<Double> bbox,
-            Map<String, Object> metadata) {
-        public Table {
+        @Value
+    @Accessors(fluent = true)
+    public static final class Table {
+        Integer pageNumber;
+        String caption;
+        List<String> headers;
+        List<List<String>> rows;
+        String markdown;
+        String sourceRef;
+        List<Double> bbox;
+        Map<String, Object> metadata;
+
+        @JsonCreator
+        public Table(
+                @JsonProperty("pageNumber") Integer pageNumber,
+                @JsonProperty("caption") String caption,
+                @JsonProperty("headers") List<String> headers,
+                @JsonProperty("rows") List<List<String>> rows,
+                @JsonProperty("markdown") String markdown,
+                @JsonProperty("sourceRef") String sourceRef,
+                @JsonProperty("bbox") List<Double> bbox,
+                @JsonProperty("metadata") Map<String, Object> metadata) {
             headers = copyList(headers);
             rows = rows == null ? List.of() : rows.stream()
                     .map(PyMuPdf4LlmResponse::copyList)
-                    .toList();
+                    .collect(Collectors.toList());
             bbox = copyList(bbox);
             metadata = copyMap(metadata);
+
+            this.pageNumber = pageNumber;
+
+            this.caption = caption;
+
+            this.headers = headers;
+
+            this.rows = rows;
+
+            this.markdown = markdown;
+
+            this.sourceRef = sourceRef;
+
+            this.bbox = bbox;
+
+            this.metadata = metadata;
+
         }
     }
 
-    public record Image(
-            Integer pageNumber,
-            String name,
-            String mimeType,
-            Integer width,
-            Integer height,
-            String sourceRef,
-            String caption,
-            String altText,
-            String ocrText,
-            Boolean ocrApplied,
-            List<Double> bbox,
-            Map<String, Object> metadata) {
-        public Image {
+        @Value
+    @Accessors(fluent = true)
+    public static final class Image {
+        Integer pageNumber;
+        String name;
+        String mimeType;
+        Integer width;
+        Integer height;
+        String sourceRef;
+        String caption;
+        String altText;
+        String ocrText;
+        Boolean ocrApplied;
+        List<Double> bbox;
+        Map<String, Object> metadata;
+
+        @JsonCreator
+        public Image(
+                @JsonProperty("pageNumber") Integer pageNumber,
+                @JsonProperty("name") String name,
+                @JsonProperty("mimeType") String mimeType,
+                @JsonProperty("width") Integer width,
+                @JsonProperty("height") Integer height,
+                @JsonProperty("sourceRef") String sourceRef,
+                @JsonProperty("caption") String caption,
+                @JsonProperty("altText") String altText,
+                @JsonProperty("ocrText") String ocrText,
+                @JsonProperty("ocrApplied") Boolean ocrApplied,
+                @JsonProperty("bbox") List<Double> bbox,
+                @JsonProperty("metadata") Map<String, Object> metadata) {
             bbox = copyList(bbox);
             metadata = copyMap(metadata);
+
+            this.pageNumber = pageNumber;
+
+            this.name = name;
+
+            this.mimeType = mimeType;
+
+            this.width = width;
+
+            this.height = height;
+
+            this.sourceRef = sourceRef;
+
+            this.caption = caption;
+
+            this.altText = altText;
+
+            this.ocrText = ocrText;
+
+            this.ocrApplied = ocrApplied;
+
+            this.bbox = bbox;
+
+            this.metadata = metadata;
+
         }
     }
 
-    public record Warning(
-            String code,
-            String message,
-            String sourceRef,
-            Map<String, Object> metadata) {
-        public Warning {
+        @Value
+    @Accessors(fluent = true)
+    public static final class Warning {
+        String code;
+        String message;
+        String sourceRef;
+        Map<String, Object> metadata;
+
+        @JsonCreator
+        public Warning(
+                @JsonProperty("code") String code,
+                @JsonProperty("message") String message,
+                @JsonProperty("sourceRef") String sourceRef,
+                @JsonProperty("metadata") Map<String, Object> metadata) {
             metadata = copyMap(metadata);
+
+            this.code = code;
+
+            this.message = message;
+
+            this.sourceRef = sourceRef;
+
+            this.metadata = metadata;
+
         }
     }
 
