@@ -2,6 +2,7 @@ package studio.one.base.user.infrastructure.persistence.jdbc;
 
 import java.sql.Timestamp;
 import java.time.Instant;
+import java.util.stream.Collectors;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -66,10 +67,8 @@ public class ApplicationCompanyJdbcRepository extends BaseJdbcRepository impleme
 
     @Override
     public Page<ApplicationCompany> findAll(Pageable pageable) {
-        String select = """
-                select COMPANY_ID, NAME, DISPLAY_NAME, DOMAIN_NAME, DESCRIPTION, STATUS, ARCHIVED_AT, ARCHIVED_BY, CREATION_DATE, MODIFIED_DATE
-                  from TB_APPLICATION_COMPANY
-                """;
+        String select = (
+"select COMPANY_ID, NAME, DISPLAY_NAME, DOMAIN_NAME, DESCRIPTION, STATUS, ARCHIVED_AT, ARCHIVED_BY, CREATION_DATE, MODIFIED_DATE\\n" + "  from TB_APPLICATION_COMPANY\\n");
         String count = "select count(*) from TB_APPLICATION_COMPANY";
         Page<ApplicationCompany> page = queryPage(select, count, Map.of(), pageable, COMPANY_ROW_MAPPER, "COMPANY_ID", SORT_COLUMNS);
         loadProperties(page.getContent());
@@ -78,11 +77,8 @@ public class ApplicationCompanyJdbcRepository extends BaseJdbcRepository impleme
 
     @Override
     public List<ApplicationCompany> findAll() {
-        String sql = """
-                select COMPANY_ID, NAME, DISPLAY_NAME, DOMAIN_NAME, DESCRIPTION, STATUS, ARCHIVED_AT, ARCHIVED_BY, CREATION_DATE, MODIFIED_DATE
-                  from TB_APPLICATION_COMPANY
-                  order by COMPANY_ID
-                """;
+        String sql = (
+"select COMPANY_ID, NAME, DISPLAY_NAME, DOMAIN_NAME, DESCRIPTION, STATUS, ARCHIVED_AT, ARCHIVED_BY, CREATION_DATE, MODIFIED_DATE\\n" + "  from TB_APPLICATION_COMPANY\\n" + "  order by COMPANY_ID\\n");
         List<ApplicationCompany> companies = namedTemplate.query(sql, COMPANY_ROW_MAPPER);
         loadProperties(companies);
         return companies;
@@ -90,11 +86,8 @@ public class ApplicationCompanyJdbcRepository extends BaseJdbcRepository impleme
 
     @Override
     public Optional<ApplicationCompany> findById(Long companyId) {
-        String sql = """
-                select COMPANY_ID, NAME, DISPLAY_NAME, DOMAIN_NAME, DESCRIPTION, STATUS, ARCHIVED_AT, ARCHIVED_BY, CREATION_DATE, MODIFIED_DATE
-                  from TB_APPLICATION_COMPANY
-                 where COMPANY_ID = :companyId
-                """;
+        String sql = (
+"select COMPANY_ID, NAME, DISPLAY_NAME, DOMAIN_NAME, DESCRIPTION, STATUS, ARCHIVED_AT, ARCHIVED_BY, CREATION_DATE, MODIFIED_DATE\\n" + "  from TB_APPLICATION_COMPANY\\n" + " where COMPANY_ID = :companyId\\n");
         Optional<ApplicationCompany> result = queryOptional(sql, Map.of("companyId", companyId), COMPANY_ROW_MAPPER);
         result.ifPresent(this::loadProperties);
         return result;
@@ -102,11 +95,8 @@ public class ApplicationCompanyJdbcRepository extends BaseJdbcRepository impleme
 
     @Override
     public Optional<ApplicationCompany> findByName(String name) {
-        String sql = """
-                select COMPANY_ID, NAME, DISPLAY_NAME, DOMAIN_NAME, DESCRIPTION, STATUS, ARCHIVED_AT, ARCHIVED_BY, CREATION_DATE, MODIFIED_DATE
-                  from TB_APPLICATION_COMPANY
-                 where lower(NAME) = lower(:name)
-                """;
+        String sql = (
+"select COMPANY_ID, NAME, DISPLAY_NAME, DOMAIN_NAME, DESCRIPTION, STATUS, ARCHIVED_AT, ARCHIVED_BY, CREATION_DATE, MODIFIED_DATE\\n" + "  from TB_APPLICATION_COMPANY\\n" + " where lower(NAME) = lower(:name)\\n");
         Optional<ApplicationCompany> result = queryOptional(sql, Map.of("name", name), COMPANY_ROW_MAPPER);
         result.ifPresent(this::loadProperties);
         return result;
@@ -114,11 +104,8 @@ public class ApplicationCompanyJdbcRepository extends BaseJdbcRepository impleme
 
     @Override
     public Optional<ApplicationCompany> findByDomainName(String domainName) {
-        String sql = """
-                select COMPANY_ID, NAME, DISPLAY_NAME, DOMAIN_NAME, DESCRIPTION, STATUS, ARCHIVED_AT, ARCHIVED_BY, CREATION_DATE, MODIFIED_DATE
-                  from TB_APPLICATION_COMPANY
-                 where lower(DOMAIN_NAME) = lower(:domainName)
-                """;
+        String sql = (
+"select COMPANY_ID, NAME, DISPLAY_NAME, DOMAIN_NAME, DESCRIPTION, STATUS, ARCHIVED_AT, ARCHIVED_BY, CREATION_DATE, MODIFIED_DATE\\n" + "  from TB_APPLICATION_COMPANY\\n" + " where lower(DOMAIN_NAME) = lower(:domainName)\\n");
         Optional<ApplicationCompany> result = queryOptional(sql, Map.of("domainName", domainName), COMPANY_ROW_MAPPER);
         result.ifPresent(this::loadProperties);
         return result;
@@ -134,22 +121,10 @@ public class ApplicationCompanyJdbcRepository extends BaseJdbcRepository impleme
     @Override
     public Page<ApplicationCompany> search(String keyword, Pageable pageable) {
         Map<String, Object> params = Map.of("q", keyword == null ? "" : "%" + keyword.toLowerCase() + "%");
-        String select = """
-                select COMPANY_ID, NAME, DISPLAY_NAME, DOMAIN_NAME, DESCRIPTION, STATUS, ARCHIVED_AT, ARCHIVED_BY, CREATION_DATE, MODIFIED_DATE
-                  from TB_APPLICATION_COMPANY
-                 where (:q = '' or
-                        lower(NAME) like :q or
-                        lower(DISPLAY_NAME) like :q or
-                        lower(DOMAIN_NAME) like :q)
-                """;
-        String count = """
-                select count(*)
-                  from TB_APPLICATION_COMPANY
-                 where (:q = '' or
-                        lower(NAME) like :q or
-                        lower(DISPLAY_NAME) like :q or
-                        lower(DOMAIN_NAME) like :q)
-                """;
+        String select = (
+"select COMPANY_ID, NAME, DISPLAY_NAME, DOMAIN_NAME, DESCRIPTION, STATUS, ARCHIVED_AT, ARCHIVED_BY, CREATION_DATE, MODIFIED_DATE\\n" + "  from TB_APPLICATION_COMPANY\\n" + " where (:q = '' or\\n" + "        lower(NAME) like :q or\\n" + "        lower(DISPLAY_NAME) like :q or\\n" + "        lower(DOMAIN_NAME) like :q)\\n");
+        String count = (
+"select count(*)\\n" + "  from TB_APPLICATION_COMPANY\\n" + " where (:q = '' or\\n" + "        lower(NAME) like :q or\\n" + "        lower(DISPLAY_NAME) like :q or\\n" + "        lower(DOMAIN_NAME) like :q)\\n");
         Page<ApplicationCompany> page = queryPage(select, count, params, pageable, COMPANY_ROW_MAPPER, "COMPANY_ID", SORT_COLUMNS);
         loadProperties(page.getContent());
         return page;
@@ -191,18 +166,8 @@ public class ApplicationCompanyJdbcRepository extends BaseJdbcRepository impleme
         if (company.getModifiedDate() == null) {
             company.setModifiedDate(Instant.now());
         }
-        String sql = """
-                update TB_APPLICATION_COMPANY
-                   set NAME = :name,
-                       DISPLAY_NAME = :displayName,
-                       DOMAIN_NAME = :domainName,
-                       DESCRIPTION = :description,
-                       STATUS = :status,
-                       ARCHIVED_AT = :archivedAt,
-                       ARCHIVED_BY = :archivedBy,
-                       MODIFIED_DATE = :modifiedDate
-                 where COMPANY_ID = :companyId
-                """;
+        String sql = (
+"update TB_APPLICATION_COMPANY\\n" + "   set NAME = :name,\\n" + "       DISPLAY_NAME = :displayName,\\n" + "       DOMAIN_NAME = :domainName,\\n" + "       DESCRIPTION = :description,\\n" + "       STATUS = :status,\\n" + "       ARCHIVED_AT = :archivedAt,\\n" + "       ARCHIVED_BY = :archivedBy,\\n" + "       MODIFIED_DATE = :modifiedDate\\n" + " where COMPANY_ID = :companyId\\n");
         Map<String, Object> params = new HashMap<>();
         params.put("name", company.getName());
         params.put("displayName", company.getDisplayName());
@@ -242,7 +207,7 @@ public class ApplicationCompanyJdbcRepository extends BaseJdbcRepository impleme
         List<Long> ids = companies.stream()
                 .map(ApplicationCompany::getCompanyId)
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
         if (ids.isEmpty()) {
             return;
         }
